    sources.
  * Don't ship /usr/share/doc/libc6/{README,PROJECT}.gz, they are 
    irrelevant for an already built GNU libc.
  * Move /usr/share/doc/libc6/{CONFORMANCE,NAMESPACE,NOTES}.gz to
    libc6-dev.
  * Move all upstream changelogs in glibc-docs, and install a small
    changelog file explaining the reason.
  * Ship README.libm in libc6-dev.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 19:17:08 +0200

eglibc (2.9-22) unstable; urgency=low

  * kfreebsd/local-sysdeps.diff: update to revision 2670 (from glibc-bsd).
  * any/submitted-signalfd-eventfd.diff: new patch to support < 2.6.27 
    kernels in eventfd/signalfd.  Closes: #537509.
  * alpha/submitted-fdatasync.diff: update to keep fdatasync() as a
    cancellation point.  Closes: #537586.
  * sparc/cvs-siginfo.diff, s390/submitted-siginfo.diff, 
    ia64/submitted-siginfo.diff: new patches to get "struct sigevent"
    from bits/siginfo.h in sync with the kernel version. Closes: #534548.
  * debhelper.in/libc-alt.preinst: also clear old /lib32 and /usr/lib32
    symlinks on install, as they might have been left by a previous 
    installation of the package.
  * patches/any/cvs-getaddrinfo-nss-notfound.diff: new patch to correctly
    handle missing NSS modules.  Closes: #535106, #298290.
  * Add X-Interactive: true to /etc/init.d/glibc.sh.  Closes: #538435.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 10:16:30 +0200

eglibc (2.9-21) unstable; urgency=low

  [ Aurelien Jarno ]
  * Re-add /usr/include/scsi/scsi.h.  Closes: #537354.
  * libc6-dev-i386: pre-depends on libc6-i386.  Closes: #535313.
  * /etc/bindresvport.blacklist: add rsync (port 873). Closes: #537289.
  * any/local-bindresvport_blacklist.diff: update from latest openSUSE 
    version.
  * kfreebsd/local-sysdeps.diff: update to revision 2643 (from glibc-bsd).
    Closes: #537492.
  * debian/local/etc_init.d/glibc.sh: add support for start/stop/restart/
    force-reload options.