@@ -14,8 +14,9 @@ eglibc (2.9-23) UNRELEASED; urgency=low
   * Move all upstream changelogs in glibc-docs, and install a small
     changelog file explaining the reason.
   * Ship README.libm in libc6-dev.
+  * Update any/cvs-broken-dns.diff from upstream.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 19:17:08 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 23:57:25 +0200
 
 eglibc (2.9-22) unstable; urgency=low
 
